<resources>
    <string name="app_name">MoviePlanner</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="CreateNewEvent">Create New Event</string>
    <string name="event_title">Event Title</string>
    <string name="event_start_date">Start Date</string>
    <string name="event_end_date">End Date</string>
    <string name="event_venue">Event Venue</string>
    <string name="event_location">Location</string>
    <string name="Attendees">Attendees</string>
    <string name="add_new_event_button">Submit</string>
    <string name="add_new_movie_button">Save Movie</string>
    <string name="delete_event">Delete Event</string>
    <string name="edit_event">Edit Event Details</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="movie_year">Movie Year</string>
    <string name="movie_title">Movie Title</string>
    <string name="edit_movie">Edit movie details</string>
    <string name="ScheduleEvent">Schedule Event</string>
    <string name="event_attendees_label">Attendees</string>
    <string name="add_new_movie">Add New Movie</string>
    <string name="calendar_saturday">saturday</string>
    <string name="calendar_friday">friday</string>
    <string name="calendar_thursday">thursday</string>
    <string name="calendar_wednesday">wednesday</string>
    <string name="calendar_tuesday">tuesday</string>
    <string name="calendar_sunday">sunday</string>
    <string name="calendar_monday">monday</string>
    <string name="list_view">List View</string>
    <string name="calendar_view">Calendar View</string>
    <string name="action_bar_sort_asc">Ascending</string>
    <string name="action_bar_sort_desc">Descending</string>
</resources>
