<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/eventHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/edit_event"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColorLink="@color/colorPrimary" />

    <EditText
        android:id="@+id/editEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/event_title" />

    <EditText
        android:id="@+id/editEventStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/event_start_date" />

    <EditText
        android:id="@+id/editEventEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/event_end_date" />

    <EditText
        android:id="@+id/editEventVenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/event_venue" />

    <EditText
        android:id="@+id/editEventLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:singleLine="true"
        android:inputType="textPersonName" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/event_attendees_label">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editEventAttendees"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/editEventSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:onClick="editEvent"
        android:text="@string/add_new_event_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

</LinearLayout>